--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint src --ext js,jsx --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,css,md}\"",
     "test": "echo \"No tests specified yet\"",
+    "prebuild": "npm run generate:manifest",
     "check": "npm run lint && npm run format -- --check && npm run build",
     "prepare": "husky"
   },
